--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,27 +10,29 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=435
-dock_hsplit_3=-561
+dock_hsplit_3=-287
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/guns/Spritesheet/Alternative Color/spritesheet_alt.png")
+dock_filesystem_selected_paths=PackedStringArray("res://prefabs/")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://addons/gdquest_sparkly_bag/autoloads/")
+dock_node_current_tab=0
+dock_history_include_scene=true
+dock_history_include_global=true
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://world.tscn")
-current_scene="res://world.tscn"
+open_scenes=PackedStringArray("res://world.tscn", "res://bullet.tscn")
+current_scene="res://bullet.tscn"
 center_split_offset=-344
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
@@ -47,3 +49,24 @@ open_shaders=[]
 split_offset=0
 selected_shader=""
 text_shader_zoom_factor=1.0
+
+[EditorWindow]
+
+screen=0
+mode="maximized"
+position=Vector2i(0, 29)
+
+[GameView]
+
+floating_window_rect=Rect2i(0, 0, 0, 0)
+floating_window_screen=-1
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
