--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,19 +1,25 @@
-list=Array[Dictionary]([{
+list=[{
 "base": &"Resource",
 "class": &"Checkpoint",
 "icon": "",
+"is_abstract": false,
+"is_tool": false,
 "language": &"GDScript",
 "path": "res://addons/godot_tours/checkpoint.gd"
 }, {
 "base": &"Resource",
 "class": &"TourEntry",
 "icon": "",
+"is_abstract": false,
+"is_tool": false,
 "language": &"GDScript",
 "path": "res://addons/godot_tours/godot_tour_entry.gd"
 }, {
 "base": &"Resource",
 "class": &"TourList",
 "icon": "",
+"is_abstract": false,
+"is_tool": false,
 "language": &"GDScript",
 "path": "res://addons/godot_tours/godot_tour_list.gd"
-}])
+}]
