--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://addons/godot_tours/editor_interface_access.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/", "res://addons/", "res://addons/godot_tours/", "res://addons/gdquest_sparkly_bag/autoloads/")
+dock_filesystem_selected_paths=PackedStringArray("res://prefabs/bullet.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://prefabs/", "res://levels/", "res://addons/godot_tours/", "res://addons/gdquest_sparkly_bag/autoloads/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://levels/world.tscn", "res://prefabs/bullet.tscn")
-current_scene="res://levels/world.tscn"
+current_scene="res://prefabs/bullet.tscn"
 center_split_offset=-344
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -53,8 +53,9 @@ text_shader_zoom_factor=1.0
 [EditorWindow]
 
 screen=0
-mode="maximized"
-position=Vector2i(0, 23)
+mode="windowed"
+position=Vector2i(817, 400)
+size=Vector2i(1152, 648)
 
 [GameView]
 
