--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/Laser Sprites/18.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://prefabs/", "res://levels/", "res://assets/", "res://assets/Laser Sprites/", "res://addons/godot_tours/", "res://addons/gdquest_sparkly_bag/autoloads/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/Laser Sprites/32.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://prefabs/", "res://assets/", "res://assets/Laser Sprites/", "res://addons/godot_tours/", "res://addons/gdquest_sparkly_bag/autoloads/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -36,12 +36,12 @@ selected_main_editor_idx=0
 
 [ScriptEditor]
 
-open_scripts=["res://tours/01_player_movement/01_tour.gd", "res://addons/godot_tours/editor_interface_access.gd"]
-selected_script="res://addons/godot_tours/editor_interface_access.gd"
+open_scripts=["res://tours/01_player_movement/01_tour.gd", "res://prefabs/bullet.gd", "res://addons/godot_tours/editor_interface_access.gd"]
+selected_script="res://prefabs/bullet.gd"
 open_help=[]
 script_split_offset=276
 list_split_offset=124
-zoom_factor=0.947367
+zoom_factor=1.2388645
 
 [ShaderEditor]
 
@@ -53,8 +53,8 @@ text_shader_zoom_factor=1.0
 [EditorWindow]
 
 screen=0
-mode="windowed"
-position=Vector2i(1281, 31)
+mode="maximized"
+position=Vector2i(0, 29)
 size=Vector2i(1278, 1000)
 
 [GameView]
