--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -217,11 +217,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 11,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 419,
-"scroll_position": 0.0,
+"row": 284,
+"scroll_position": 483.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -418,6 +418,20 @@ state={
 "h_scroll_position": 0,
 "row": 23,
 "scroll_position": 5.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://prefabs/bullet.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 19,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 3,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
