--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=435
-dock_hsplit_3=-287
+dock_hsplit_2=270
+dock_hsplit_3=-406
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://levels/world.tscn", "res://prefabs/bullet.tscn")
-current_scene="res://levels/world.tscn"
+current_scene="res://prefabs/bullet.tscn"
 center_split_offset=-344
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -39,9 +39,9 @@ selected_main_editor_idx=0
 open_scripts=["res://tours/01_player_movement/01_tour.gd", "res://prefabs/bullet.gd", "res://addons/godot_tours/editor_interface_access.gd"]
 selected_script="res://prefabs/bullet.gd"
 open_help=[]
-script_split_offset=276
+script_split_offset=283
 list_split_offset=124
-zoom_factor=1.2388645
+zoom_factor=1.4715023
 
 [ShaderEditor]
 
@@ -55,7 +55,7 @@ text_shader_zoom_factor=1.0
 screen=0
 mode="maximized"
 position=Vector2i(0, 29)
-size=Vector2i(1278, 1000)
+size=Vector2i(1278, 997)
 
 [GameView]
 
